--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ android {
 
 dependencies {
 
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
     implementation 'com.google.code.gson:gson:2.10.1'
 
     implementation 'androidx.core:core-ktx:1.8.0'
