Unit Testing With Mock Web Server

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ android {
 
 dependencies {
 
+    testImplementation "com.google.truth:truth:1.1.4"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.11.0")
+
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
